PropertiesServlet supports getTests
git-svn-id: https://svn.exedio.com/cope/cops/trunk@16452 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/src/com/exedio/cops/properties.css
+++ b/src/com/exedio/cops/properties.css
@@ -36,6 +36,17 @@ table th
 	font-weight:normal;
 }
 
+table caption
+{
+	font-style:italic;
+	text-align:left;
+	white-space:nowrap;
+	background:#ccc;
+	padding:1px 5px;
+	border:solid 2px white;
+	border-bottom-width:0px;
+}
+
 table td
 {
 	text-align:left;
