nicer view on hidden properties
git-svn-id: https://svn.exedio.com/cope/cops/trunk@18909 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/src/com/exedio/cops/properties.css
+++ b/src/com/exedio/cops/properties.css
@@ -55,6 +55,15 @@ table td
 	padding:1px 3px;
 }
 
+table td.notavailable
+{
+	text-align:center;
+	vertical-align:middle;
+	background:#eee;
+	padding:1px 3px;
+	font-size:7pt;
+}
+
 div.footer
 {
 	font-size:70%;
