show unspecified properties on demand only
git-svn-id: https://svn.exedio.com/cope/cops/trunk@24703 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/src/com/exedio/cops/properties.css
+++ b/src/com/exedio/cops/properties.css
@@ -64,6 +64,21 @@ table td.notavailable
 	font-size:7pt;
 }
 
+table tr.unspecified
+{
+	display:none;
+}
+
+table tr.unspecified th
+{
+	background:#CCB;
+}
+
+table tr.unspecified td
+{
+	background:#FFE;
+}
+
 input.propertyValue
 {
 	display:none;
