--- a/src/com/exedio/cops/properties.css
+++ b/src/com/exedio/cops/properties.css
@@ -163,3 +163,15 @@ table td.aborted
 {
 	background-color:#ffe;
 }
+
+tr.hidden-by-filter
+{
+	display:none;
+}
+
+input.filter
+{
+	width:6em;
+	border:none;
+	background-color:#eee;
+}
